--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">For Honor Emotes</string>
+    <string name="app_name">Lawbringer Emote</string>
+    <string name="ps4_handle">PS4: dontberaf</string>
+    <string name="reddit_handle">Reddit: rafaelph</string>
+    <string name="twitter_handle">Twitter: @dontberaf</string>
 </resources>
